--- a/flavors/python3-ds-EXASOL-6.1.0/flavor_base/build_run/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.1.0/flavor_base/build_run/Dockerfile
@@ -12,10 +12,10 @@ RUN ldconfig
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
-#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
-
 WORKDIR /exaudf_src/
-RUN ["/bin/bash", "-c", "source /env && bash build.sh -c opt --define python=true //:exaudfclient_py3"]
+RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary-py3"]
 RUN cp -r -L bazel-bin/* /exaudf
+
+RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
 
 COPY --from={{build_deps}} /build_info /build_info
