#68: Copy CI Setup config in .env to config bucket

--- a/google-cloud-build/.env/env.template.yaml
+++ b/google-cloud-build/.env/env.template.yaml
@@ -3,6 +3,7 @@ github_repository:
 github_user_name: 
 log_bucket: 
 container_bucket: 
+config_bucket:
 key_ring_name: 
 key_name: 
 build_docker_repository:
