Move udfclient source to new directory

--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/base_test_build_run/Dockerfile
@@ -9,16 +9,16 @@ COPY --from={{base_test_deps}} /env /env
 
 RUN ldconfig
 
-RUN mkdir /exaudf_src /exaudf
-COPY src/ /exaudf_src/
+RUN mkdir /exaudfclient /exaudf
+COPY /exaudfclient/base /exaudfclient/base
 
-WORKDIR /exaudf_src/
+WORKDIR /exaudfclient/base
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty -c dbg --config python --config slow-wrapper-py3"]
 RUN cp -r -L bazel-bin/* /exaudf
-
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3.sh
 
+WORKDIR /
 RUN mkdir /exasol_emulator
 COPY emulator/ /exasol_emulator
-COPY src/exaudflib/zmqcontainer.proto /exasol_emulator
+COPY /exaudfclient/base/exaudflib/zmqcontainer.proto /exasol_emulator
 RUN cd /exasol_emulator && protoc zmqcontainer.proto --python_out=.
