--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -87,6 +87,7 @@ cc_library(
     name = "exaudflib",
     srcs = ["exaudflib.cc"],
     linkstatic = 1,
+    alwayslink = True,
     defines = VM_ENABLED_DEFINES,
     deps = [":exaudflib-deps", ":zmqcontainer", "@zmq//:zmqlib", ":header", "//:debug_message_h"],
 )
