Add alwayslink to all cc_library rules

--- a/exaudfclient/base/javacontainer/BUILD
+++ b/exaudfclient/base/javacontainer/BUILD
@@ -97,13 +97,15 @@ cc_library(
     # Normally, this indicates that compiling with higher optimizations levels may break your progrom. Unitl now, we don't have enough tests
     # to verify if higher levels of optimizations might work. We needed to deactivate link time optimization, too, because this delay the compilation
     # until the exaudfclient binary is build and causes than there the same problem.
+    alwayslink=True,
 )
 
 cc_library(
     name = "javacontainer",
     srcs = [":javacontainer.cc", ":dummy"],
     hdrs = [":exascript_java_int", ":filter_swig_code_exascript_java_h","exascript_java_jni_decl.h"],
-    deps = ["@ssl//:ssl","@java//:java", ":exascript_java", "//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"]
+    deps = ["@ssl//:ssl","@java//:java", ":exascript_java", "//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"],
+    alwayslink=True,
 )
 
 #workaround to build jars together with javacontainer c++ library
