--- a/exaudfclient/base/python/python3/BUILD
+++ b/exaudfclient/base/python/python3/BUILD
@@ -81,7 +81,8 @@ cc_library(
     name = "exascript_python",
     srcs = [":filter_swig_code_exascript_python_cc",":filter_swig_code_exascript_python_h"],
     hdrs = [":filter_swig_code_exascript_python_h"],
-    deps = ["@python3//:python3","//exaudflib:exaudflib-deps","//exaudflib:header"]
+    deps = ["@python3//:python3","//exaudflib:exaudflib-deps","//exaudflib:header"],
+    alwayslink=True,
 )
 
 cc_library(
@@ -90,7 +91,8 @@ cc_library(
     data = [":extend_exascript_python_preset_py"], 
     hdrs = [":exascript_python_int", ":filter_swig_code_exascript_python_h"],
     include_prefix = ".",
-    deps = ["@python3//:python3",":exascript_python","//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"]
+    deps = ["@python3//:python3",":exascript_python","//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"],
+    alwayslink=True,
 )
 
 #workaround to build pyextdataframe.so together with pythoncontainer c++ library
@@ -101,10 +103,16 @@ genrule(
     srcs = [":pyextdataframe.so"],
 )
 
+cc_library(
+    name = "pyextdataframe",
+    srcs = [":python_ext_dataframe.cc"],
+    deps = ["@python3//:python3","@numpy//:numpy","//exaudflib:exaudflib-deps",
+            "//exaudflib:header", "//:debug_message_h"],
+    alwayslink=True,
+)
+
 cc_binary(
     name = "pyextdataframe.so",
     linkshared = 1,
-    srcs = [":python_ext_dataframe.cc"],
-    deps = ["@python3//:python3","@numpy//:numpy","//exaudflib:exaudflib-deps",
-            "//exaudflib:header", "//:debug_message_h"]
+    deps = [":pyextdataframe"]
 )
