--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -1,6 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 exports_files(["filter_swig_code.py", "build_integrated.py","LICENSE-exasol-script-api.txt"])
 
+load("//:variables.bzl", "VM_ENABLED_DEFINES")
+
 config_setting(
     name = "benchmark",
     define_values = {"benchmark": "true"},
@@ -21,13 +23,27 @@ config_setting(
     define_values = {"bash": "true"},
 )
 
-load("//:variables.bzl", "VM_ENABLED_DEFINES")
+
+config_setting(
+    name = "fast_binary",
+    define_values = {
+        "binary_type": "fast_binary",
+        },
+)
+
+config_setting(
+    name = "slow_wrapper",
+    define_values = {
+        "binary_type": "slow_wrapper",
+        },
+)
 
 cc_library(
     name = "debug_message_h",
     hdrs = [
         "debug_message.h"
     ],
+    alwayslink = True,
 )
 
 # Using cc_binary to build a shared library as output target is a workaround, because
@@ -69,7 +85,7 @@ VM_PYTHON3_DEPS=select({
     }) 
 
 cc_binary(
-    name = "exaudfclient",
+    name = "exaudfclient_bin",
     srcs = ["exaudfclient.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
@@ -78,11 +94,8 @@ cc_binary(
     data = [":libexaudflib_complete.so"]
 )
 
-#TODO 172.17.0.2:60292> exaudf/exaudfclient: error while loading shared libraries: libscriptoptionlines.so: cannot open shared object file: No such file or directory
-
-
 cc_binary(
-    name = "exaudfclient_py3",
+    name = "exaudfclient_py3_bin",
     srcs = ["exaudfclient.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
@@ -98,22 +111,38 @@ cc_binary(
 # - A workarround to provide these paths would be wrapper bash script which set these environment variables
 # - For performance reason, we can not wrap the binary into a shell script, as such this is only for local debugging and testing
 #   and we hardcode the paths for the production container
+
+SLOW_WRAPPER_BINARY_PY2="""
+  $(location create_binary_wrapper.sh) "$(location exaudfclient_bin)" "$(location exaudfclient)" "$(location exaudfclient.template.sh)"
+"""
+FAST_BINARY_PY2="""cp "$(location exaudfclient_bin)" "$(location exaudfclient)" """
+CREATE_BINARY_PY2_SCRIPT=select({
+        "//:fast_binary": FAST_BINARY_PY2,
+        "//:slow_wrapper": SLOW_WRAPPER_BINARY_PY2,
+        "//conditions:default": FAST_BINARY_PY2
+    })
+
 genrule(
-    name = "exaudfclient_py2_bash_wrapper",
-    cmd = """
-        $(location create_binary_wrapper.sh) "$(location exaudfclient)" "$(location exaudfclient.sh)" "$(location exaudfclient.template.sh)"
-    """,
-    outs = ["exaudfclient.sh"],
-    srcs = [":exaudfclient", "libexaudflib_complete.so", "exaudfclient.template.sh","create_binary_wrapper.sh"],
+    name = "exaudfclient",
+    cmd = CREATE_BINARY_PY2_SCRIPT, 
+    outs = ["exaudfclient"],
+    srcs = [":exaudfclient_bin", ":libexaudflib_complete.so", "exaudfclient.template.sh","create_binary_wrapper.sh"],
     output_to_bindir = True
 )
 
+SLOW_WRAPPER_BINARY_PY3="""
+  $(location create_binary_wrapper.sh) "$(location exaudfclient_py3_bin)" "$(location exaudfclient_py3)" "$(location exaudfclient.template.sh)"
+"""
+FAST_BINARY_PY3="""cp "$(location exaudfclient_py3_bin)" "$(location exaudfclient_py3)" """
+CREATE_BINARY_PY3_SCRIPT=select({
+        "//:fast_binary": FAST_BINARY_PY3,
+        "//:slow_wrapper": SLOW_WRAPPER_BINARY_PY3,
+        "//conditions:default": FAST_BINARY_PY3
+    })
 genrule(
-    name = "exaudfclient_py3_bash_wrapper",
-    cmd = """
-        $(location create_binary_wrapper.sh) "$(location exaudfclient_py3)" "$(location exaudfclient_py3.sh)" "$(location exaudfclient.template.sh)"
-    """,
-    outs = ["exaudfclient_py3.sh"],
-    srcs = [":exaudfclient_py3", "libexaudflib_complete.so", "exaudfclient.template.sh", "create_binary_wrapper.sh"],
+    name = "exaudfclient_py3",
+    cmd = CREATE_BINARY_PY3_SCRIPT,
+    outs = ["exaudfclient_py3"],
+    srcs = [":exaudfclient_py3_bin", ":libexaudflib_complete.so", "exaudfclient.template.sh", "create_binary_wrapper.sh"],
     output_to_bindir = True
 )
