Fix missing buckets and conf directory in base_test_build_run images

--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/base_test_build_run/Dockerfile
@@ -1,5 +1,7 @@
 FROM {{language_deps}}
 
+RUN mkdir /conf /buckets
+
 COPY --from={{base_test_deps}} /usr /usr
 COPY --from={{base_test_deps}} /lib /lib
 COPY --from={{base_test_deps}} /bin /bin
