--- a/flavors/python3-ds-cuda-preview-EXASOL-6.1.0/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/python3-ds-cuda-preview-EXASOL-6.1.0/flavor_base/base_test_build_run/Dockerfile
@@ -1,5 +1,7 @@
 FROM {{language_deps}}
 
+RUN mkdir /conf /buckets
+
 COPY --from={{base_test_deps}} /usr /usr
 COPY --from={{base_test_deps}} /lib /lib
 COPY --from={{base_test_deps}} /bin /bin
@@ -15,7 +17,7 @@ COPY /exaudfclient/base /exaudfclient/base
 WORKDIR /exaudfclient/base
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty -c dbg --config python --config slow-wrapper-py3"]
 RUN cp -r -L bazel-bin/* /exaudf
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3.sh
+RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
 
 WORKDIR /
 RUN mkdir /exasol_emulator
