Fix linking of libjvm to fix Java UDF crash

--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -89,9 +89,9 @@ cc_binary(
     srcs = ["exaudfclient.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
-            ["//exaudflib:exaudflib-deps"],
+          ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
-    data = [":libexaudflib_complete.so"]
+    data = [":libexaudflib_complete.so"],
 )
 
 cc_binary(
