Adapt CI timeouts and the fix the path of the exported containers in the CI scripts.

--- a/google-cloud-build/ci-scripts/export.yaml
+++ b/google-cloud-build/ci-scripts/export.yaml
@@ -43,9 +43,9 @@ steps:
   name: 'gcr.io/cloud-builders/gsutil'
   args: [
           'cp',
-          '.build_output/exports/*',
+          '.build_output/cache/exports/*',
           '${_CONTAINER_BUCKET}/exports/$COMMIT_SHA/$BUILD_ID/'
           ]
-timeout: "7200s"
+timeout: "3600s"
 options:
   diskSizeGb: "50"
