Clean implementation for passing the docker socket and add docker cli to test_container dockerfile

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -17,6 +17,8 @@ RUN apt-get -y update && \
     apt-get -y autoremove && \
     ldconfig
 
+RUN curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh
+
 RUN mkdir -p downloads/ODBC downloads/JDBC downloads/EXAplus downloads/virtualschema-jdbc-adapter
 RUN curl -s https://www.exasol.com/support/secure/attachment/65437/EXASOL_ODBC-6.0.11.tar.gz | tar -C downloads/ODBC --strip-components 1 -zxf -
 RUN curl -s https://www.exasol.com/support/secure/attachment/60963/EXASOL_JDBC-6.0.8.tar.gz | tar -C downloads/JDBC --strip-components 1 -zxf -
