--- a/Pipfile
+++ b/Pipfile
@@ -1,14 +1,14 @@
 [packages]
-luigi = ">=2.8.9"
-jinja2 = ">=2.10.1"
-humanfriendly = ">=4.18"
-jsonpickle = ">=1.1"
-simplejson = ">=3.16.0"
-docker = ">=4.0.0"
-netaddr = ">=0.7.19"
-click = ">=7.0"
-requests = ">=2.21.0"
-networkx = ">=2.3"
-pydot = ">=1.4.0"
-"stopwatch.py" = ">=1.0.0"
-gitpython= ">=2.1.0"
+luigi = "==2.8.11"
+jinja2 = "==2.10.3"
+humanfriendly = "==4.18"
+jsonpickle = "==1.2"
+simplejson = "==3.17.0"
+docker = "==4.1.0"
+netaddr = "==0.7.19"
+click = "==7.0"
+requests = "==2.22.0"
+networkx = "==2.4"
+pydot = "==1.4.1"
+"stopwatch.py" = "==1.0.1"
+gitpython = "==3.0.5"
